--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <footer>
             Produzido por João Victor!!
         </footer>
+        <script src="graficos/informacoesGlobais.js"> </script>
 </body>
 </html>
