--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </nav>
         </header>
         <main>
+            <section class="graficos-container" id="graficos-container"></section>
             
         </main>
         <footer>
