--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3F - João Victor</title>
     <link rel="stylesheet" href="style.css">
+    <title>3F - João Victor</title>
 </head>
 <body>
         <header>
@@ -16,12 +16,14 @@
             </nav>
         </header>
         <main>
-            <section class="graficos-container" id="graficos-container"></section>
+            <section class="graficos-container" id="graficos-container">
+                
+            </section>
             
         </main>
         <footer>
-            Produzido por João Victor!!
+            Produzido por João Victor.
         </footer>
-        <script src="graficos/informacoesGlobais.js"> </script>
+    <script src="graficos/informacoesGlobais.js"></script>
 </body>
 </html>
