--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>3F - João Victor</title>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
+
 </head>
 <body>
         <header>
@@ -24,6 +26,8 @@
         <footer>
             Produzido por João Victor.
         </footer>
-    <script src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/comum.js"></script>
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/quantidaDeUsusarios.js"></script>
 </body>
 </html>
