--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>3F - João Victor</title>
+    <title>3F - Amanda</title>
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
-
 </head>
 <body>
         <header>
@@ -24,10 +23,10 @@
             
         </main>
         <footer>
-            Produzido por João Victor.
+            Produzido por Amanda.
         </footer>
-    <script type="module" src="graficos/comum.js"></script>
+    <script type="module" src="graficos/quantidadeDeUsuarios.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
-    <script type="module" src="graficos/quantidaDeUsusarios.js"></script>
+    <script type="module" src="graficos/comum.js"></script>
 </body>
 </html>
